--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
       <!-- <header className="App-header"> -->
         <!-- <img src={logo} className="App-logo" alt="logo" /> -->
         <aside id="yeso" ><button id="mybutton" style="float:left;cursor:pointer;padding:6px;background: #4682B4;color:white;margin-top: 10px;margin-left: 50px;margin-right: 30px">start</button>
-        <img class="myimage" src="chrome-extension://gcjjgjjgkemobbeilcjphdjofkaaegbm/pop.png" height='20px' alt="popup" width="20px" style="cursor: pointer;"/>
+        <img class="myimage" height='20px' alt="popup" width="20px" style="cursor: pointer;"/>
       </aside>
         <br>
         <br>
