--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <head>
   <style>
     body {
-   width:150px;
+   width:300px;
    margin:0 auto;
 }
   </style>
@@ -14,7 +14,7 @@
       <!-- <header className="App-header"> -->
         <!-- <img src={logo} className="App-logo" alt="logo" /> -->
         <aside id="yeso" ><button id="mybutton" style="float:left;cursor:pointer;padding:6px;background: #4682B4;color:white;margin-top: 10px;margin-left: 50px;margin-right: 30px">start</button>
-        <img class="myimage" height='20px' alt="popup" width="20px" style="cursor: pointer;"/>
+        <img class="myimage" height='30px' alt="popup" width="30px" style="cursor: pointer;float:right;"/>
       </aside>
         <br>
         <br>
