--- a/popup.html
+++ b/popup.html
@@ -13,11 +13,12 @@
     <!-- <div className="App"> -->
       <!-- <header className="App-header"> -->
         <!-- <img src={logo} className="App-logo" alt="logo" /> -->
-        <aside id="yeso" ><button id="mybutton" style="float:left;cursor:pointer;padding:6px;background: #4682B4;color:white;margin-top: 10px;margin-left: 50px;margin-right: 30px">start</button>
-        <img class="myimage" height='30px' alt="popup" width="30px" style="cursor: pointer;float:right;"/>
+        <aside id="yeso" ><aside style="float:left;padding:6px;margin-top: 10px;font-size: 15px;">Youtube bookmarks</aside><button id="mybutton" style="float:left;cursor:pointer;padding:5px;width:67px;background: black;color:#FFD700;margin-top: 10px;margin-left: 20px;margin-right: 20px">start</button>
+        <img class="myimage" height='30px' alt="popup" width="30px" style="cursor: pointer;float:right;margin-top: 5px;"/>
       </aside>
         <br>
         <br>
+        <!-- <br> -->
         <!-- <br> -->
         <!-- <br> -->
       <!-- </header> -->
